<resources>
    <string name="app_name">Week 1 - Daily 4</string>
    <string name="name">Name: Bernardo Calatayud</string>
    <string name="location">Location: Mexico city</string>
    <string name="hobbies">Hobbies: Swimming, dancing, hiking, reading, baking, puzzles, electronics
    collecting, Computer_programming</string>
    <string name="College">National Autonomous University of Mexico</string>
    <string name="ImgVal">TOD</string>
    <string name="education1">Education:</string>
    <string name="HighSchool">High School 6</string>
    <string name="MiddleSchool">Sac-be educational center</string>
</resources>
