<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/sup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/name" />

            <TextView
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/location" />



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:layout_gravity="end">

                <TableRow>

                    <TextView
                        style="@style/EducationLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10sp"
                        android:paddingStart="5sp"
                        android:text="@string/education1" />
                    <TextView
                        style="@style/EducationRight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/College" />
                </TableRow>

                <TableRow>
                    <TextView
                        style="@style/EducationLeft"
                        />
                    <TextView
                        style="@style/EducationRight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:text="@string/HighSchool" />
                </TableRow>
                <TableRow>
                    <TextView
                        style="@style/EducationLeft"
                        />
                    <TextView
                        style="@style/EducationRight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:text="@string/MiddleSchool" />
                    @string/MiddleSchool
                </TableRow>

            </TableLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="125sp"
                android:layout_height="150sp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/ImgVal"
                android:scaleType="centerCrop"
                android:src="@drawable/pp" />
        </FrameLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/AppTheme2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textAlignment="textEnd"
            android:fontFamily="sans-serif-condensed"/>

    </RelativeLayout>


</LinearLayout>